# libginf

./: Makefile.am  README.md  autogen.sh  configure.ac
data/tests/: Makefile.am
libginf/: Makefile.am  ginf-common.c  ginf-common.h  ginf-self-test.c  ginf-version.h  ginf-version.h.in  libginf.h  libginf.pc.in
